force-app/main/default/objects/Project_Policy__c/Project_Policy__c.object-meta.xml
<CustomObject>
    <description>Policies for any given Project</description>
    <label>Project Policy</label>
    <nameField>
        <label>Project Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>