force-app/main/default/objects/Project_Policy__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>Unique Policy Number for each Policy</description>
    <displayFormat>P-{00}</displayFormat>
    <label>Policy Number</label>
    <type>AutoNumber</type>
</CustomField>